# tg-signer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_EN.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_zh.md  feature_request_zh.md  question.md
.github/workflows/: docker-build.yml  publish.yml  test.yml
docker/: CN.Dockerfile  Dockerfile  Dockerfile.webui  README.md  docker-compose.example.yml  docker-compose.yml
tests/: conftest.py  test_cli_signer_message_thread_id.py  test_config.py  test_core.py  test_match_config.py  test_sign_config_v2_to_v3.py
tg_signer/: __init__.py  __main__.py  ai_tools.py  cli.py  config.py  core.py  logger.py  signer.py  utils.py
tg_signer/_kurigram/: __init__.py  methods.py
tg_signer/cli/: __init__.py  monitor.py  signer.py
tg_signer/notification/: server_chan.py
tg_signer/webui/: __init__.py  __main__.py  app.py  data.py  interactive.py  repository.py  schema_utils.py  schemas.py  settings.py
tg_signer/webui/static/: app.js  index.html  styles.css
