[metadata]
name = tg-signer
url = https://github.com/amchii/tg-signer
version = attr: tg_signer.__version__
project_urls =
    Source = https://github.com/amchii/tg-signer
author = Amchii
author_email = finethankuandyou@gmail.com
license = BSD 3-Clause License
description = Telegram signer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    kurirogram
    click
    pydantic

[options.extras_require]
tgcrypto =
    tgcrypto
speedup =
    tgcrypto

[options.entry_points]
console_scripts =
    tg-signer = tg_signer.__main__:signer

[flake8]
ignore = E203, E266, E402, E501, W503, W504, B950, F405, F403, C901
max-complexity = 50
select = B,C,E,F,W

[isort]
profile = black
skip = migrations
combine_as_imports = True
include_trailing_comma = True
multi_line_output = 3
